@@ -1,6 +1,7 @@
 Newest changes at the top
 Format: MM/DD/YYYY HH:MM - comment  
 
+04/13/2016 14:49 - Agent now gets its data from the right spot (oops)
 04/13/2016 11:37 - Added autorun agent and updated administration page to administer it
 04/13/2016 10:17 - Added presidential candidate to preset avatars
 04/12/2016 17:57 - Admin page now displays a table of all players (no pwhash)
